# Langchain_module

./: .gitignore  Foundation_model.ipynb  main.py  pyproject.toml  requirements.txt
Notebooks/: Memory.ipynb  Tools.ipynb
Notebooks/Module_1/: Foundation_model.ipynb  Memory.ipynb  Multi_modal.ipynb
Notebooks/Module_2/: Resources
lang_Projects/LangChain_chef/: Langchain_Chef.py
